--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_account">Account</string>
     <string name="database_url">https://socioplant-rpl-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
+    <string name="Information">Lorem ipsum dolor sit amet, ea cum omnis pericula. Mel alii case latine in. Molestie gloriatur adolescens in est, mel saepe ornatus no, et duo putant facilis moderatius. Vulputate temporibus contentiones per an. Omnis saperet voluptatibus eum cu, modus mediocrem torquatos at has. Sea ne mandamus iracundia, duo unum brute recusabo ne, ex mea sonet tincidunt consequuntur.</string>
 </resources>
